Refresh from upstream

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div>
           <span class="field">enable video: </span>
-          <input type="checkbox" id="video" checked/>
+          <input type="checkbox" id="enableVideo" checked/>
         </div>
         <div>
           <span class="field">user: </span>
